--- a/apps/web/app/app.css
+++ b/apps/web/app/app.css
@@ -1,10 +1,8 @@
 @import 'tailwindcss';
 
-@custom-variant dark (&:is(.dark *));
+/* @custom-variant dark (&:is(.dark *)); */
 
 @plugin "tailwindcss-animate";
-
-@custom-variant dark (&:is(.dark *));
 
 @theme {
   --font-sans: 'Inter', ui-sans-serif, system-ui, sans-serif,
